syntax = "proto3";

// 命 令 号: 1001
// 命令名称: sound_hysteresis_time_set
// 命令描述: 设置声响的有效ADC值迟滞时间
// 文件名称: d7c1001_snd_hysteresis_time_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbSoundHysteresisTimeSet";

message SoundHysteresisTimeSetRequest {
  // ATTR: REQUSET
  uint32 hysteresis_time = 1; //单位：ms
}

message SoundHysteresisTimeSetResponse {

}
